feat: adds user login

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ base64 = "0.22"
 rumqttc = "0.24"
 mockall = "0.13"
 argon2 = "0.5"
+jsonwebtoken = "9.3"
 
 # CDC (Supabase ETL)
 etl = { git = "https://github.com/supabase/etl", branch = "main" }
