refactor: adds garde for validation

--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -56,6 +56,9 @@ ponix-proto-prost.workspace = true
 # Authorization
 casbin = { workspace = true }
 
+# Validation
+garde = { workspace = true }
+
 [dependencies.tokio-postgres-adapter]
 git = "https://github.com/ponix-dev/casbin-tokio-postgres-adapter.git"
 
