--- a/crates/ponix_api/Cargo.toml
+++ b/crates/ponix_api/Cargo.toml
@@ -19,6 +19,9 @@ serde.workspace = true
 ponix-proto-prost.workspace = true
 ponix-proto-tonic.workspace = true
 
+# Validation
+garde = { workspace = true, features = ["email"] }
+
 [dev-dependencies]
 common = { path = "../common", features = ["testing"] }
 
