--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,15 @@ jobs:
     secrets:
       BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
 
+  e2e-tests:
+    name: E2E Tests
+    uses: ./.github/workflows/e2e-tests.yml
+    secrets:
+      BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
+
   release:
     name: Release
-    needs: [unit-tests, integration-tests]
+    needs: [unit-tests, integration-tests, e2e-tests]
     uses: ./.github/workflows/release.yml
     secrets:
       BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
