--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,6 +17,12 @@ jobs:
     secrets:
       BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
 
+  e2e-tests:
+    name: E2E Tests
+    uses: ./.github/workflows/e2e-tests.yml
+    secrets:
+      BSR_TOKEN: ${{ secrets.BSR_TOKEN }}
+
   docker-build:
     name: Docker Build
     uses: ./.github/workflows/docker-build.yml
