--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -24,11 +24,8 @@ jobs:
           install: true
           cache: true
 
-      - name: Install goose
-        run: |
-          curl -fsSL https://github.com/pressly/goose/releases/download/v3.22.1/goose_linux_x86_64 \
-            -o /usr/local/bin/goose
-          chmod +x /usr/local/bin/goose
+      - name: Install tools
+        run: mise run install-tools
 
       - name: Configure BSR authentication
         run: cargo login --registry buf "Bearer ${{ secrets.BSR_TOKEN }}"
