--- a/.mise.toml
+++ b/.mise.toml
@@ -4,13 +4,21 @@ tilt = "latest"
 rust = "latest"
 grpcurl = "latest"
 jq = "latest"
+# Cross-platform tool installs
+"github:pressly/goose" = "latest"
+"github:nats-io/natscli" = "latest"
+[tools."github:emqx/MQTTX"]
+version = "latest"
+
+[tools."github:emqx/MQTTX".platforms]
+linux-x64 = { asset_pattern = "mqttx-cli-linux-x64" }
+macos-arm64 = { asset_pattern = "mqttx-cli-macos-arm64" }
+macos-x64 = { asset_pattern = "mqttx-cli-macos-x64" }
 
 # all envs should be set in a .env file
 [env]
 _.file = '.env'
 
-[tasks.install-tools]
-run = "mise install && brew install goose && brew tap nats-io/nats-tools && brew install nats-io/nats-tools/nats && brew install mosquitto"
 
 # Test tasks - run from workspace root
 [tasks.test]
